[gd_scene load_steps=19 format=3 uid="uid://bmrweoufl1pbi"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_nvayq"]
[ext_resource type="PackedScene" uid="uid://cqi6wbtu3vlap" path="res://scenes/server-container.tscn" id="2_n07kn"]
[ext_resource type="Script" path="res://scripts/camera-controller.gd" id="3_i8ue0"]
[ext_resource type="PackedScene" uid="uid://bmci4bg3dbcar" path="res://gui/statistics-panel.tscn" id="3_ph4uk"]
[ext_resource type="PackedScene" uid="uid://burvuv1q1oe1t" path="res://gui/date-time-display.tscn" id="6_bcuad"]
[ext_resource type="Script" path="res://scripts/managers/finance-manager.gd" id="6_k0lmj"]
[ext_resource type="Script" path="res://scripts/managers/date-time-manager.gd" id="7_qrmsp"]
[ext_resource type="Script" path="res://scripts/managers/traffic-manager.gd" id="8_ygmq4"]
[ext_resource type="Script" path="res://scripts/managers/power-manager.gd" id="9_nl1t3"]
[ext_resource type="PackedScene" uid="uid://c137nllk5qnqt" path="res://scenes/cloud.tscn" id="10_s42rh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_46v2u"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bihfr"]
sky_material = SubResource("ProceduralSkyMaterial_46v2u")

[sub_resource type="Environment" id="Environment_5qu0w"]
background_mode = 1
background_color = Color(0.0862745, 0.2, 0.545098, 1)
sky = SubResource("Sky_bihfr")
ambient_light_source = 2
ambient_light_color = Color(0.760784, 0.760784, 0.760784, 1)
ambient_light_energy = 0.7
tonemap_white = 10.58
glow_normalized = true
glow_intensity = 0.9
glow_strength = 0.69
glow_blend_mode = 0
glow_hdr_threshold = 0.9
glow_hdr_scale = 0.0
glow_hdr_luminance_cap = 2.3
glow_map_strength = 0.0
fog_light_color = Color(0, 0.262745, 0.709804, 1)
fog_height = -2.0
fog_height_density = 3.7647
volumetric_fog_enabled = true
volumetric_fog_density = 0.07
volumetric_fog_albedo = Color(0.054902, 0.301961, 0.47451, 1)
volumetric_fog_emission = Color(0.341176, 0.529412, 1, 1)
volumetric_fog_length = 30.0
adjustment_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cjept"]
albedo_color = Color(1, 0.85098, 0, 1)
emission_energy_multiplier = 11.3
rim = 0.52
rim_tint = 0.0
ao_light_affect = 0.3

[sub_resource type="PlaneMesh" id="PlaneMesh_mo708"]
material = SubResource("StandardMaterial3D_cjept")
size = Vector2(4, 4)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_tpmab"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kji3e"]
albedo_color = Color(0.819608, 0.588235, 0, 0.815686)
metallic = 0.37

[sub_resource type="BoxMesh" id="BoxMesh_36swf"]
material = SubResource("StandardMaterial3D_kji3e")
size = Vector3(4, 2, 4)

[node name="Main" type="Node3D"]
script = ExtResource("1_nvayq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.453991, -1.52425e-16, -0.891006, 3.48787e-16, 1, -3.48787e-16, 0.891006, -4.69117e-16, -0.453991, 0, 0, 0)
light_color = Color(0.960784, 0.894118, 0.54902, 1)
light_energy = 2.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 3.0
shadow_enabled = true
directional_shadow_mode = 0
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5qu0w")

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_mo708")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_tpmab")

[node name="ServerContainer" parent="Floor" instance=ExtResource("2_n07kn")]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1.01, 2.08165e-12)
mesh = SubResource("BoxMesh_36swf")
skeleton = NodePath("../..")

[node name="CameraContainer" type="Node3D" parent="."]
script = ExtResource("3_i8ue0")

[node name="Camera3D" type="Camera3D" parent="CameraContainer"]
transform = Transform3D(-0.707107, 0.5, -0.5, 2.4663e-16, 0.707107, 0.707107, 0.707107, 0.5, -0.5, -2.01485, 2.76879, -1.97786)
projection = 1
current = true
fov = 67.8
size = 5.0
far = 30.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(0.820583, -0.555437, 0.134663, 0.553442, 0.831048, 0.0553244, -0.142641, 0.0291301, 0.989346, -0.044, 8.18164, -0.184754)
light_color = Color(0.945098, 0.882353, 0.698039, 1)
light_energy = 8.0
light_specular = 0.4
shadow_enabled = true
shadow_opacity = 0.4
omni_range = 13.6197

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StatisticsPanel" parent="CanvasLayer" instance=ExtResource("3_ph4uk")]
unique_name_in_owner = true

[node name="DateTimeDisplay" parent="CanvasLayer" instance=ExtResource("6_bcuad")]
unique_name_in_owner = true

[node name="FinanceManager" type="Node" parent="."]
script = ExtResource("6_k0lmj")

[node name="DateTimeManager" type="Node" parent="."]
script = ExtResource("7_qrmsp")

[node name="GlobalTimer" type="Timer" parent="DateTimeManager"]

[node name="TrafficManager" type="Node" parent="."]
script = ExtResource("8_ygmq4")

[node name="PowerManager" type="Node" parent="."]
script = ExtResource("9_nl1t3")

[node name="CloudContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -2, 2.08165e-12)

[node name="Cloud1" parent="CloudContainer" instance=ExtResource("10_s42rh")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 7.91846, 0, -6.86938)

[node name="Cloud2" parent="CloudContainer" instance=ExtResource("10_s42rh")]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, -5.7262, 0, 8.67328)
move_direction = -1

[connection signal="computing_power_updated" from="Floor/ServerContainer" to="." method="_on_server_container_computing_power_updated"]
[connection signal="time_advanced" from="DateTimeManager" to="." method="_on_time_advanced"]
[connection signal="timeout" from="DateTimeManager/GlobalTimer" to="DateTimeManager" method="_on_timer_timeout"]
[connection signal="hourly_power_consumption_decreased" from="PowerManager" to="." method="_on_power_manager_hourly_power_consumption_decreased"]
[connection signal="hourly_power_consumption_increased" from="PowerManager" to="." method="_on_power_manager_hourly_power_consumption_increased"]
